# ninjarmmpy

./: LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
examples/: get_antivirus_status.py  get_antivirus_threats.py  get_computer_systems.py  get_customers.py  get_device_health.py  get_logged_on_users.py  get_operating_systems.py  get_os_patch_installs.py  get_os_patches.py  get_physical_disks_all_devices.py  get_processors.py  get_raid_info.py  get_software_list.py  get_software_patch_installs.py  get_software_patches.py  get_volumes_all_devices.py  get_windows_services.py
ninjarmmpy/: __init__.py  auth.py  client.py  device.py  endpoints.py  groups.py  management.py  organization.py  queries.py  system.py  utils.py
