[project]
name = "ninjarmmpy"
version = "0.2.0"
description = "Unofficial API client wrapper around v2 of the NinjaRMM API"
authors = "Abdullah 'AJ' Khan <aj@ajkhan.me>"
readme = "README.md"
python = "^3.7"
respository = "https://github.com/ak9999/ninjarmmpy"
documentation = "https://app.ninjarmm.com/apidocs/"

keywords = ["NinjaRMM", "API Client"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: NinjaRMM"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"